--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,3 @@
-title: Cuyahoga Falls Class of 2028
-description: Resources and news hub for seniors
-theme: minima
-
-# Build settings
-plugins:
-  - jekyll-feed
-
-collections:
-  seniors:
-    output: true
-    permalink: /seniors/:name/
-
 defaults:
   - scope:
       path: ""
@@ -18,11 +5,13 @@ defaults:
     values:
       layout: senior
       sidebar: true
-
-# Navigation links shown by minima theme
-header_pages:
-  - seniors/index.md
-  - vendors.md
-  - news.md
-
-# Optional: set your custom domain later by adding a CNAME file with just the domain inside
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: default
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: default
